--- a/English2Chinese/index.html
+++ b/English2Chinese/index.html
@@ -14,6 +14,7 @@
             font-family: Arial, sans-serif;
             background-color: white;
             overflow: hidden;
+            transition: background-color 0.3s;
         }
         .vocab-container {
             text-align: center;
@@ -24,6 +25,7 @@
             max-width: 90%;
             max-height: 90%;
             overflow: auto;
+            transition: background-color 0.3s, color 0.3s;
         }
         .vocab-container h1 {
             font-size: 24px;
@@ -55,30 +57,75 @@
         <p id="example-sentence"></p>
     </div>
 
-    <!-- 引用外部的 vocab.js 文件 -->
-    <script src="vocab.js"></script>
-
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
+        document.addEventListener('DOMContentLoaded', async () => {
+            // 設置主題
             const theme = localStorage.getItem('mode');
-
-            // 根據 localStorage 中的主題設置背景顏色
             if (theme) {
                 document.body.style.backgroundColor = theme === 'dark' ? 'rgb(25, 25, 25)' : 'white';
+                const vocabContainer = document.querySelector('.vocab-container');
+                if (theme === 'dark') {
+                    vocabContainer.style.backgroundColor = '#333';
+                    vocabContainer.style.color = 'white';
+                } else {
+                    vocabContainer.style.backgroundColor = '#f0f0f0';
+                    vocabContainer.style.color = 'black';
+                }
             }
 
-            // 確保 vocabList 已經被加載
-            if (typeof vocabList !== 'undefined') {
-                const randomVocab = vocabList[Math.floor(Math.random() * vocabList.length)];
-                document.getElementById('english-word').textContent = randomVocab.english;
-                document.getElementById('chinese-translation').textContent = `翻譯: ${randomVocab.chinese}`;
-                document.getElementById('part-of-speech').textContent = `詞性: ${randomVocab.partOfSpeech}`;
-                document.getElementById('phonetics').textContent = `音標: ${randomVocab.phonetics}`;
-                document.getElementById('example-sentence').textContent = `例句: ${randomVocab.example}`;
-            } else {
+            // 獲取隨機單詞和翻譯及詳細信息
+            try {
+                const randomWord = await fetchRandomWord();
+                document.getElementById('english-word').textContent = randomWord;
+
+                const chineseTranslation = await fetchTranslation(randomWord);
+                document.getElementById('chinese-translation').textContent = `翻譯: ${chineseTranslation}`;
+
+                const details = await fetchWordDetails(randomWord);
+
+                if (details) {
+                    document.getElementById('part-of-speech').textContent = `詞性: ${details.partOfSpeech}`;
+                    document.getElementById('phonetics').textContent = `KK音標: ${details.phonetics}`;
+                    document.getElementById('example-sentence').textContent = `例句: ${details.exampleSentence}`;
+                } else {
+                    document.getElementById('part-of-speech').textContent = '';
+                    document.getElementById('phonetics').textContent = '';
+                    document.getElementById('example-sentence').textContent = '';
+                }
+            } catch (error) {
+                console.error('Error loading vocabulary:', error);
                 document.getElementById('english-word').textContent = 'Error loading vocabulary';
             }
         });
+
+        async function fetchRandomWord() {
+            const response = await fetch('https://random-word-api.herokuapp.com/word?number=1');
+            const words = await response.json();
+            return words[0];
+        }
+
+        async function fetchTranslation(word) {
+            const response = await fetch(`https://translate.googleapis.com/translate_a/single?client=gtx&sl=en&tl=zh-TW&dt=t&q=${encodeURIComponent(word)}`);
+            const translation = await response.json();
+            return translation[0][0][0];
+        }
+
+        async function fetchWordDetails(word) {
+            try {
+                const response = await fetch(`https://api.dictionaryapi.dev/api/v2/entries/en/${word}`);
+                if (!response.ok) throw new Error('Network response was not ok');
+                
+                const data = await response.json();
+                const partOfSpeech = data[0].meanings[0].partOfSpeech;
+                const phonetics = data[0].phonetics[0]?.text || 'N/A';
+                const exampleSentence = data[0].meanings[0].definitions[0].example || 'No example available';
+
+                return { partOfSpeech, phonetics, exampleSentence };
+            } catch (error) {
+                console.error('Error fetching word details:', error);
+                return null;
+            }
+        }
     </script>
 </body>
 </html>
