--- a/English2Chinese/index.html
+++ b/English2Chinese/index.html
@@ -37,6 +37,20 @@
             text-align: left;
         }
 
+        @media (max-width: 600px) {
+            .vocab-container {
+                width: 95%;
+                height: auto;
+                padding: 15px;
+            }
+            .vocab-container h1 {
+                font-size: 24px;
+            }
+            .vocab-container p {
+                font-size: 18px;
+            }
+        }
+
         @media (prefers-color-scheme: dark) {
             body {
                 background-color: rgb(25, 25, 25);
