--- a/English2Chinese/index.html
+++ b/English2Chinese/index.html
@@ -54,6 +54,7 @@
         <p id="chinese-translation"></p>
         <p id="part-of-speech"></p>
         <p id="phonetics"></p>
+        <p id="definition"></p>
         <p id="example-sentence"></p>
     </div>
 
@@ -92,10 +93,12 @@
                 if (details) {
                     document.getElementById('part-of-speech').textContent = `詞性: ${details.partOfSpeech}`;
                     document.getElementById('phonetics').textContent = `音標: ${details.phonetics}`;
+                    //document.getElementById('definition').textContent = `定義: ${details.definition}`;
                     document.getElementById('example-sentence').textContent = `例句: ${details.exampleSentence}`;
                 } else {
                     document.getElementById('part-of-speech').textContent = '';
                     document.getElementById('phonetics').textContent = '';
+                    document.getElementById('definition').textContent = '';
                     document.getElementById('example-sentence').textContent = '';
                 }
                 /* USE API END */
@@ -136,9 +139,10 @@
                 const data = await response.json();
                 const partOfSpeech = data[0].meanings[0].partOfSpeech;
                 const phonetics = data[0].phonetic || 'N/A';
+                const definition = data[0].meanings[0].definitions[0].definition || 'No definition available';
                 const exampleSentence = data[0].meanings[0].definitions[0].example || 'No example available';
 
-                return { partOfSpeech, phonetics, exampleSentence };
+                return { partOfSpeech, phonetics, definition, exampleSentence };
             } catch (error) {
                 console.error('Error fetching word details:', error);
                 return null;
