--- a/English2Chinese/index.html
+++ b/English2Chinese/index.html
@@ -135,6 +135,30 @@
             document.querySelector('.vocab-container').addEventListener('click', async () => {
                 updateVocabulary();
             });
+
+            /* 監聽觸摸事件 */
+            var startY = 0; // 起始Y坐標
+            var dist = 0; // 移動距離
+
+            document.addEventListener('touchstart', handleTouchStart, false);
+            document.addEventListener('touchmove', handleTouchMove, false);
+
+            function handleTouchStart(event) {
+                startY = event.touches[0].clientY;
+                dist = 0;
+            }
+
+            function handleTouchMove(event) {
+                var currentY = event.touches[0].clientY;
+                dist = currentY - startY;
+            }
+
+            document.addEventListener('touchend', function () {
+                if (dist > 50) { // 如果移動距離大於50px，認為是下拉操作
+                    // 觸發更新操作
+                    updateVocabulary();
+                }
+            }, false);
         });
 
         async function fetchRandomWord() {
