--- a/English2Chinese/index.html
+++ b/English2Chinese/index.html
@@ -180,14 +180,39 @@
 
         async function fetchWordDetails(word) {
             try {
-                const response = await fetch(`https://api.dictionaryapi.dev/api/v2/entries/en/${word}`);
-                if (!response.ok) throw new Error('Network response was not ok');
-                
+                const response = await fetch('https://api.groq.com/openai/v1/chat/completions', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'Authorization': 'Bearer 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' // Groq API Key
+                    },
+                    body: JSON.stringify({
+                        "messages": [
+                            {
+                                "role": "user",
+                                "content": `Provide details for the word '${word}' in the following JSON format:\n{\n\"part_of_speech\": \"<part_of_speech>\",\n\"phonetics\": \"<phonetics>\",\n\"definition\": \"<definition>\",\n\"example_sentence\": \"<example_sentence>\"\n}`
+                                }
+                        ],
+                        "model": "llama3-8b-8192",
+                        "temperature": 0,
+                        "max_tokens": 255,
+                        "top_p": 1,
+                        "stream": false,
+                        "response_format": {
+                            "type": "json_object"
+                        },
+                        "stop": null
+                    })
+                });
                 const data = await response.json();
-                const partOfSpeech = data[0].meanings[0].partOfSpeech;
-                const phonetics = data[0].phonetic || 'N/A';
-                const definition = data[0].meanings[0].definitions[0].definition || 'No definition available';
-                const exampleSentence = data[0].meanings[0].definitions[0].example || 'No example available';
+                const content = data.choices[0].message.content;
+
+                const details = JSON.parse(content);
+
+                const partOfSpeech = details.part_of_speech || 'N/A';
+                const phonetics = details.phonetics || 'N/A';
+                const definition = details.definition || 'No definition available';
+                const exampleSentence = details.example_sentence || 'No example available';
 
                 return { partOfSpeech, phonetics, definition, exampleSentence };
             } catch (error) {
